; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_create_link_dnsize.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zap.c_zap_create_link_dnsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DMU_OT_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @zap_create_link_dnsize(i32* %0, i32 %1, i64 %2, i8* %3, i32 %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i64 %2, i64* %9, align 8
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32* %5, i32** %12, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* @DMU_OT_NONE, align 4
  %17 = load i32, i32* %11, align 4
  %18 = load i32*, i32** %12, align 8
  %19 = call i64 @zap_create_dnsize(i32* %14, i32 %15, i32 %16, i32 0, i32 %17, i32* %18)
  store i64 %19, i64* %13, align 8
  %20 = load i64, i64* %13, align 8
  %21 = icmp ne i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @VERIFY(i32 %22)
  %24 = load i32*, i32** %7, align 8
  %25 = load i64, i64* %9, align 8
  %26 = load i8*, i8** %10, align 8
  %27 = load i32*, i32** %12, align 8
  %28 = call i32 @zap_add(i32* %24, i64 %25, i8* %26, i32 8, i32 1, i64* %13, i32* %27)
  %29 = call i32 @VERIFY0(i32 %28)
  %30 = load i64, i64* %13, align 8
  ret i64 %30
}

declare dso_local i64 @zap_create_dnsize(i32*, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @VERIFY0(i32) #1

declare dso_local i32 @zap_add(i32*, i64, i8*, i32, i32, i64*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
